Sat Mar 31 10:17:06 BST 2007  Olly Betts <olly@survex.com>

	* api/Makefile,backends/Makefile,backends/flint/Makefile,
	  backends/inmemory/Makefile,backends/multi/Makefile,
	  backends/quartz/Makefile,backends/remote/Makefile,bin/Makefile,
	  common/Makefile,examples/Makefile,getopt/Makefile,include/Makefile,
	  languages/Makefile,matcher/Makefile,net/Makefile,
	  queryparser/Makefile,tests/harness/Makefile: Don't pass $(MAKEFLAGS)
	  on the command line to $(MAKE) when invoking the top level Makefile
	  from a static Makefile.  It's passed automatically anyway, and also
	  $(MAKEFLAGS) doesn't have a leading '-' so "make -s" tries to do
	  "make s" at the top level.

Sat Mar 31 09:28:06 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Fix end of loop handling.

Sat Mar 31 09:03:26 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Fix to compile.

Sat Mar 31 07:53:25 BST 2007  Olly Betts <olly@survex.com>

	* common/safewindows.h,common/safewinsock2.h: safewindows.h is
	  included by a lot of files so we want to keep it lightweight
	  so split winsock2.h related stuff into safewinsock2.h.
	* common/remoteconnection.h: Move WinsockInitializer here.
	* common/safeerrno.h: #include "safewinsock2.h" not <winsock2.h>.

Sat Mar 31 07:19:06 BST 2007  Olly Betts <olly@survex.com>

	* common/remoteserver.h: Stop trying to include "remoteserver.h"
	  because that's the SAME HEADER!

Sat Mar 31 07:16:23 BST 2007  Olly Betts <olly@survex.com>

	* common/tcpclient.h,common/tcpserver.h: Fix comments - the class is
	  called WinsockInitializer not WinsockInitialiser.

Sat Mar 31 06:54:22 BST 2007  Olly Betts <olly@survex.com>

	* net/progclient.cc: Don't compile any code from this file if
	  __WIN32__ is defined (for mingw).

Sat Mar 31 06:52:27 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Simplify code in test_stemlangs1().

Sat Mar 31 06:22:26 BST 2007  Olly Betts <olly@survex.com>
